--- a/requirements.txt
+++ b/requirements.txt
@@ -1,138 +1,3 @@
-alembic==1.4.3
-argon2-cffi==20.1.0
-ase==3.21.1
-async-generator==1.10
-attrs==20.3.0
-backcall==0.2.0
-bleach==3.2.1
-cached-property==1.5.2
-certifi==2020.11.8
-cffi==1.14.3
-chardet==3.0.4
-class-resolver==0.0.8
-click==7.1.2
-click-default-group==1.2.2
-cliff==3.5.0
-cmaes==0.7.0
-cmd2==1.4.0
-colorama==0.4.4
-colorlog==4.6.2
-cvxpy==1.1.12
-cvxpylayers==0.1.5
-cycler==0.10.0
-dataclasses==0.6
-dataclasses-json==0.5.2
-decorator==4.4.2
-defusedxml==0.6.0
-diffcp==1.0.16
-docdata==0.0.2
-ecos==2.0.7.post1
-entrypoints==0.3
-future==0.18.2
-geotorch @ git+https://github.com/Lezcano/geotorch/@5d7626a98e583b1ccc6e37c24fb84fae73c312be
-googledrivedownloader==0.4
-h5py==3.2.1
-idna==2.10
-importlib-metadata==3.0.0
-ipykernel==5.3.4
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==7.5.1
-isodate==0.6.0
-jedi==0.17.2
-Jinja2==2.11.2
-joblib==0.17.0
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==6.1.7
-jupyter-console==6.2.0
-jupyter-core==4.7.0
-jupyterlab-pygments==0.1.2
-kiwisolver==1.3.1
-littleutils==0.2.2
-llvmlite==0.36.0
-Mako==1.1.3
-MarkupSafe==1.1.1
-marshmallow==3.9.1
-marshmallow-enum==1.5.1
-matplotlib==3.3.3
-mistune==0.8.4
-more-click==0.0.3
-mypy-extensions==0.4.3
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.8
-nest-asyncio==1.4.3
-networkx==2.5.1
-nltk==3.5
-notebook==6.1.5
-numba==0.53.1
-numpy==1.19.4
-ogb==1.2.4
-optuna==2.3.0
-osqp==0.6.2.post0
-outdated==0.2.0
-packaging==20.4
-pandas==1.1.4
-pandocfilters==1.4.3
-parso==0.7.1
-pbr==5.5.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.0.1
-prettytable==0.7.2
-prometheus-client==0.9.0
-prompt-toolkit==3.0.8
-ptyprocess==0.6.0
-pybind11==2.6.2
-pycparser==2.20
-Pygments==2.7.2
--e git+https://github.com/tgebhart/pykeen.git@e263df771f5c495f90ed0dd3a7a8002e61c64da8#egg=pykeen
-pyparsing==2.4.7
-pyperclip==1.8.1
-pyrsistent==0.17.3
-pystow==0.1.6
-python-dateutil==2.8.1
-python-editor==1.0.4
-python-louvain==0.15
-pytz==2020.4
-PyYAML==5.3.1
-pyzmq==20.0.0
-qdldl==0.1.5.post0
-qtconsole==4.7.7
-QtPy==1.9.0
-rdflib==5.0.0
-regex==2020.11.13
-requests==2.25.0
-scikit-learn==0.23.2
-scipy==1.5.4
-scs==2.1.3
-seaborn==0.11.0
-Send2Trash==1.5.0
--e git+https://github.com/tgebhart/sheaf_kg.git@76db430abdc3fba394490bf690ae4698a673f9fa#egg=sheaf_kg
-six==1.15.0
-sklearn==0.0
-SQLAlchemy==1.3.20
-stevedore==3.2.2
-stringcase==1.2.0
-tabulate==0.8.7
-terminado==0.9.1
-testpath==0.4.4
-threadpoolctl==2.1.0
-torch==1.8.0
-torch-cluster==1.5.9
-torch-geometric==1.7.0
-torch-scatter==2.0.6
-torch-sparse==0.6.9
-torch-spline-conv==1.2.1
-torchvision==0.9.0
-tornado==6.1
-tqdm==4.53.0
-traitlets==5.0.5
-typing-extensions==3.7.4.3
-typing-inspect==0.6.0
-urllib3==1.26.2
-wcwidth==0.2.5
-webencodings==0.5.1
-widgetsnbextension==3.5.1
-zipp==3.4.0
+pykeen
+matplotlib
+seaborn
